--- a/1_orientation/2_data_science/code/Raison_Ramirez.html
+++ b/1_orientation/2_data_science/code/Raison_Ramirez.html
@@ -2620,7 +2620,10 @@ window.FlexDashboardComponents.push({
 3 Brookline                  0.0700
 4 Somerville                 0.201 
 5 Back Bay                   0.238 </code></pre>
+<div id="section" class="section level3">
+<h3></h3>
 <p>One indicator which we thought of is the average availability. Indeed, the locations in the most wanted neighbourhoods will be more demanded than the others. Making the inverse of the availability a good indicator of neighbourhoods’ attractiveness. Find Above the top five neighbourhoods in terms of that indicator.</p>
+</div>
 </div>
 <div id="price-variation-over-time" class="section level1">
 <h1>Price Variation Over Time</h1>
@@ -2651,7 +2654,7 @@ window.FlexDashboardComponents.push({
 8 2020-04-23      258.
 9 2020-04-24      266.</code></pre>
 </div>
-<div id="section" class="section level3">
+<div id="section-1" class="section level3">
 <h3></h3>
 <p>The evolution of the price around Boston is really straightforward, as there is a normal rise of the average price in the summer. However, there is a weird pike around the end of April, that wecan identify more precisely by selecting the right period of time, from April 17th to April 20th.</p>
 <p>There seems to be somthing really interesting happening there, and we might be able to learn more about the location by checking the neighbourhoods where the rise is the steepest.</p>
